# testrustinteractif

./: .gitignore  Cargo.toml  README.txt  start.bat  start.sh
.cargo/: config.toml
src/: main.rs
